--- a/css/style.css
+++ b/css/style.css
@@ -738,7 +738,8 @@ h3.my-profession {
     display: inline-block;
 }
 
-.contact-info-item .icon .fa {
+.contact-info-item .icon .fa,
+.contact-info-item .icon .fa-brands {
     font-size: 25px;
     color: var(--skin-color);
 }
