--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,7 @@ h3.my-profession {
     margin-bottom: 15px;
     font-size: 20px;
     color: var(--text-black-700);
+    text-align: justify;
 }
 
 .home .home-img {
@@ -423,6 +424,7 @@ h3.my-profession {
     font-size: 16px;
     line-height: 25px;
     color: var(--text-black-700);
+    text-align: justify;
 }
 
 .about .about-content .personal-info {
