--- a/css/style.css
+++ b/css/style.css
@@ -637,8 +637,7 @@ h3.my-profession {
 .service .service-item .service-item-inner .icon .fa,
 .service .service-item .service-item-inner .icon .fab,
 .service .service-item .service-item-inner .icon .fa-brands,
-.service .service-item .service-item-inner .icon .fa-solid 
-{
+.service .service-item .service-item-inner .icon .fa-solid {
     font-size: 40px;
     line-height: 60px;
     color: var(--skin-color);
@@ -651,17 +650,14 @@ h3.my-profession {
 .service .service-item .service-item-inner .icon:hover,
 .service .service-item .service-item-inner .icon .fa:hover,
 .service .service-item .service-item-inner .icon .fa-brands:hover,
-.service .service-item .service-item-inner .icon .fa-solid:hover
-{
+.service .service-item .service-item-inner .icon .fa-solid:hover {
     background-color: var(--skin-color);
 }
 
 .service .service-item .service-item-inner .icon .fa:hover,
 .service .service-item .service-item-inner .icon .fab:hover,
 .service .service-item .service-item-inner .icon .fa-brands:hover,
-.service .service-item .service-item-inner .icon .fa-solid:hover,
-
-{
+.service .service-item .service-item-inner .icon .fa-solid:hover {
     color: #ffff;
 }
 
